# player_generation

./: .gitignore  Cargo.toml  README.md
src/: main.rs  players.rs
