[package]
name = "player_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.27.0", features = ["full"]}
bounded-integer = { version = "0.5.6", features = ["macro"] }
rand = "0.8.5"
random_name_generator = "0.3.4"
structopt = "0.3.26"
