[package]
name = "player_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bounded-integer = { version = "0.5.6", features = ["macro"] }
rusqlite = {version = "0.29.0", features = ["bundled"]}
rand = "0.8.5"
random_name_generator = "0.3.4"
structopt = "0.3.26"
